--- a/src/input.css
+++ b/src/input.css
@@ -5,3 +5,8 @@
 * {
   scroll-behavior: smooth;
 }
+
+.navbar-fixed {
+  @apply fixed z-[9999] bg-white bg-opacity-80 backdrop-blur-sm;
+  box-shadow: inset 0px 1px 0 0 rgb(255, 255, 255);
+}
